--- a/NewsWebsiteReact/package.json
+++ b/NewsWebsiteReact/package.json
@@ -16,7 +16,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.5.0",
-    "axios": "^1.7.9",
+    "axios": "^1.8.4",
+    "bootstrap": "^5.3.5",
     "react": "^18.3.1",
     "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.3.1",
