--- a/NewsWebsiteReact/package.json
+++ b/NewsWebsiteReact/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
+    "esbuild": "^0.25.3",
     "react": "^18.3.1",
     "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.3.1",
