--- a/NewsWebsiteReact/package.json
+++ b/NewsWebsiteReact/package.json
@@ -15,10 +15,14 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@getbrevo/brevo": "^2.2.0",
     "@reduxjs/toolkit": "^2.5.0",
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "esbuild": "^0.25.3",
+    "express": "^5.1.0",
     "react": "^18.3.1",
     "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.3.1",
