--- a/NewsWebsiteLaravel/composer.json
+++ b/NewsWebsiteLaravel/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "google/cloud-translate": "1.12",
+        "google/cloud-translate": "^2.0",
         "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.3",
